Bug Fixes and Small Features - Fix welcome message when player changes their name - Unverify previous discord account - Show pocket world players in `/list` - Create GUI to manage vote rewards - Setup one player sleep in the pocket world - Ignore afk players for night skip - Limit pet teleportation notifications to more than ten blocks - Add util enum for custom heads - Update maven shade plugin